added correct and incorrect feedbacks depending on clicked answer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,13 @@ h1, h2, h3 {
     outline: 0;
 } 
 
+.green {
+    background-color: green;
+}
+
+.red {
+    background-color: red;
+}
 /***QUIZ IMAGES***/
 .question .card img {
     height: 100%;
