--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,10 @@
  h1 {
      font-size: 7em;
 }
+
+ #landing-page ul:hover{
+     transform: scale(1.2);
+ }
 /***USED OFTEN***/
  h1, h2, h3 {
      color: #fffde7;
