added media query style to reduce font size of h1 on mobile phone screens and removed transform property of landing page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,4 +61,12 @@
      height: 100%;
      width: 100%;
 }
- 
+/***MEDIA QUERIES***/
+@media screen and (max-width: 600px) {
+  #landing-page ul:hover{
+     transform: none;
+}
+   h1 {
+       font-size: 4em;
+   }
+}
