linked index.html to header h1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,12 @@
      font-size: 7em;
 }
 
+header a {
+    color: #fffde7;
+}
+header a:hover {
+    color: #fffde7; 
+}
  #landing-page ul:hover{
      transform: scale(1.2);
      transition: transform .2s;
