added black color to .green and .red classes in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,9 +66,11 @@ header a:hover {
 }
  .green {
      background-color: green;
+     color: black;
 }
  .red {
      background-color: red;
+     color: black;
 }
 /***QUIZ IMAGES***/
  .question .card img {
