--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,3 +88,9 @@ header a:hover {
        font-size: 4em;
    }
 }
+
+@media only screen and (max-width: 1620px) {
+    #start-button{
+        margin-bottom: 2rem;
+    }
+}
