--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@1,400;1,700&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@1,400;1,700&display=swap');
  * {
      margin: 0;
      padding: 0;
@@ -6,6 +6,7 @@
 }
  body {
      font-family: 'Balsamiq Sans', sans-serif;
+     font-weight:400;
 }
  body {
      background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(102, 101, 101, 0.7)), to(rgba(102, 101, 101, 0.7))),url(../images/planet-earth.jpg);
