--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
      border: 0;
 }
  body {
-     font-family: 'Balsamiq Sans', sans-serif;
+     font-family: 'Balsamiq Sans', cursive;
      font-weight:400;
      font-style: regular;
 }
