--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
      border: 0;
 }
  body {
-     font-family: 'Balsamiq Sans', cursive; 
+     font-family: 'Balsamiq Sans', sans-serif; 
 }
  body {
      background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(102, 101, 101, 0.7)), to(rgba(102, 101, 101, 0.7))),url(../images/planet-earth.jpg);
